RNN model training

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -9,7 +9,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow version: 2.10.1\n",
+      "Keras version: 2.10.0\n",
+      "GPU is available\n",
+      "Name: /physical_device:GPU:0   Type: GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "print(\"Tensorflow version:\", tf.__version__)\n",
+    "print(\"Keras version:\", tf.keras.__version__)\n",
+    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")\n",
+    "\n",
+    "# List all available GPUs\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "for gpu in gpus:\n",
+    "    print(\"Name:\", gpu.name, \"  Type:\", gpu.device_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Physical GPUs, 1 Logical GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set GPU as the only visible device\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        tf.config.set_visible_devices(gpus[0], 'GPU')\n",
+    "        logical_gpus = tf.config.list_logical_devices('GPU')\n",
+    "        print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPU\")\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +329,7 @@
        " 32]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,14 +367,6 @@
    "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
-      "1641221/1641221 [==============================] - 0s 0us/step\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -2364,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2419,7 @@
        "\"? this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for ? and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also ? to the two little boy's that played the ? of norman and paul they were just brilliant children are often left out of the ? list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2451,7 @@
        "       [   0,    0,    0, ...,  204,  131,    9]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2475,13 +2521,134 @@
        "        451,  202,   14,    6,  717])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Training a Simple RNN Model\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(vocab_size, 128, input_length=maxlen))\n",
+    "model.add(SimpleRNN(128, activation=\"relu\"))\n",
+    "model.add(Dense(1, activation=\"sigmoid\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 500, 128)          1280000   \n",
+      "                                                                 \n",
+      " simple_rnn (SimpleRNN)      (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 129       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,313,025\n",
+      "Trainable params: 1,313,025\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Model Compilation\n",
+    "\n",
+    "model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.EarlyStopping at 0x1ca50c36a90>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Create an instance of the model for Early Stopping\n",
+    "\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "early_stopping = EarlyStopping(monitor = \"val_loss\", patience=5, restore_best_weights=True)\n",
+    "early_stopping\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/12\n",
+      "625/625 [==============================] - 246s 393ms/step - loss: 0.7256 - accuracy: 0.7113 - val_loss: 0.4530 - val_accuracy: 0.7836\n",
+      "Epoch 2/12\n",
+      "625/625 [==============================] - 251s 402ms/step - loss: 0.3571 - accuracy: 0.8498 - val_loss: 0.3937 - val_accuracy: 0.8322\n",
+      "Epoch 3/12\n",
+      "625/625 [==============================] - 245s 392ms/step - loss: 0.2902 - accuracy: 0.8763 - val_loss: 0.5359 - val_accuracy: 0.7202\n",
+      "Epoch 4/12\n",
+      "625/625 [==============================] - 240s 384ms/step - loss: 0.3353 - accuracy: 0.8594 - val_loss: 0.4754 - val_accuracy: 0.7910\n",
+      "Epoch 5/12\n",
+      "625/625 [==============================] - 241s 385ms/step - loss: 0.2162 - accuracy: 0.9154 - val_loss: 0.4637 - val_accuracy: 0.8294\n",
+      "Epoch 6/12\n",
+      "625/625 [==============================] - 242s 387ms/step - loss: 0.1967 - accuracy: 0.9230 - val_loss: 0.4890 - val_accuracy: 0.8186\n",
+      "Epoch 7/12\n",
+      "625/625 [==============================] - 240s 385ms/step - loss: 0.1344 - accuracy: 0.9512 - val_loss: 0.5882 - val_accuracy: 0.8110\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Model Training\n",
+    "with tf.device('/GPU:0'): \n",
+    "  history =model.fit(\n",
+    "    x_train,y_train,\n",
+    "    epochs=12,\n",
+    "    batch_size =32,\n",
+    "    validation_split=0.2,\n",
+    "    callbacks=[early_stopping],\n",
+    "    verbose=1,\n",
+    "    use_multiprocessing=False,\n",
+    "    workers=1\n",
+    "  )\n"
    ]
   },
   {
